--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -187,25 +187,6 @@ footer nav ul li a {
   text-align: center;
   border: 2px dashed #D61E92;
 }
-.villager .single-villager .title {
-  width: -moz-fit-content;
-  width: fit-content;
-  justify-self: center;
-  border: none;
-  background-color: #4361EE;
-  padding: 0.6rem 0.8rem;
-  font-family: "Inconsolata", sans-serif;
-  color: #FAFAFA;
-  font-size: 1.2rem;
-  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-  cursor: pointer;
-}
-.villager .single-villager .title.button-focus {
-  font-weight: bolder;
-  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-}
 .villager .single-villager .villager-events {
   grid-area: 3/1/4/2;
   border: 2px dashed #D61E92;
@@ -260,6 +241,60 @@ footer nav ul li a {
   text-align: center;
   padding: 0.4rem 0;
   font-weight: 600;
+}
+
+.player-progress {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(7, auto);
+  grid-gap: 1rem;
+}
+.player-progress h2 {
+  grid-area: 1/1/2/4;
+}
+.player-progress article {
+  border: 2px dashed #D61E92;
+  padding: 1rem;
+}
+.player-progress article h3 {
+  width: -moz-fit-content;
+  width: fit-content;
+  text-align: center;
+  border: none;
+  background-color: #4361EE;
+  padding: 0.6rem 0.8rem;
+  font-family: "Inconsolata", sans-serif;
+  color: #FAFAFA;
+  font-size: 1.2rem;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+}
+.player-progress article.player {
+  grid-area: 2/1/3/3;
+}
+.player-progress article.skill {
+  grid-area: 2/3/3/4;
+}
+.player-progress article.possessed-items {
+  grid-area: 3/1/4/2;
+}
+.player-progress article.books {
+  grid-area: 3/2/4/3;
+}
+.player-progress article.stats {
+  grid-area: 3/3/4/4;
+}
+.player-progress article.bundles {
+  grid-area: 4/1/5/4;
+}
+.player-progress article.artifacts {
+  grid-area: 5/1/6/4;
+}
+.player-progress article.relationships {
+  grid-area: 6/1/7/4;
+}
+.player-progress article.locations {
+  grid-area: 7/1/8/4;
 }
 
 form.register-login {
@@ -487,6 +522,25 @@ html body main {
   padding: 2rem;
   background-color: #FAFAFA;
   box-shadow: inset 0.3rem 0px 0px 0px rgba(217, 217, 217, 0.6), inset -0.3rem 0px 0px 0px rgba(217, 217, 217, 0.6), inset 0.6rem 0px 0px 0px rgba(217, 217, 217, 0.4), inset -0.6rem 0px 0px 0px rgba(217, 217, 217, 0.4);
+}
+html body main .title {
+  width: -moz-fit-content;
+  width: fit-content;
+  justify-self: center;
+  border: none;
+  background-color: #4361EE;
+  padding: 0.6rem 0.8rem;
+  font-family: "Inconsolata", sans-serif;
+  color: #FAFAFA;
+  font-size: 1.2rem;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  cursor: pointer;
+}
+html body main .title.button-focus {
+  font-weight: bolder;
+  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 html body p {
   margin: 0;
