--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'users/homepage';
 @import 'users/villagers';
 @import 'users/villager';
+@import 'users/game';
 @import 'forms/register';
 @import 'admin/partials/header';
 @import 'admin/homepage';
@@ -36,6 +37,26 @@ html {
                         inset -.3rem 0px 0px 0px rgba(217,217,217,0.6),
                         inset .6rem 0px 0px 0px rgba(217,217,217,0.4),
                         inset -.6rem 0px 0px 0px rgba(217,217,217,0.4);
+
+            .title {
+                width: fit-content;
+                justify-self:center;
+                border: none;
+                background-color: $blue;
+                padding: 0.6rem .8rem;
+                font-family: $text-font;
+                color: $background-main;
+                font-size:1.2rem;
+                clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                                        100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+                cursor: pointer;
+                
+                &.button-focus {
+                    font-weight: bolder;
+                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+                }
+                
+            }
         }
 
         p {
