--- a/templates/users/user/game_partials/_skills.phtml
+++ b/templates/users/user/game_partials/_skills.phtml
@@ -1,16 +1,16 @@
-<?php
-    if($key === "skills")
-    {
-?>
-<h3>Your skills</h3>
-<ul>
+<article class="skill">
     <?php
-        foreach($player as $skill)
-        {
+        $player = $data['skills'];
     ?>
-        <li><?=$skill->getName();?>:  <?=$skill->getLevel();?>/10</li>
-    <?php
-        }
-    }
-    ?>
-</ul>
+    <h3>Your skills</h3>
+    <ul>
+        <?php
+            foreach($player as $skill)
+            {
+        ?>
+            <li><?=$skill->getName();?>:  <?=$skill->getLevel();?>/10</li>
+        <?php
+            }
+        ?>
+    </ul>
+</article>
