--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -259,7 +259,6 @@ footer nav ul li a {
 .player-progress article h3 {
   width: -moz-fit-content;
   width: fit-content;
-  text-align: center;
   border: none;
   background-color: #4361EE;
   padding: 0.6rem 0.8rem;
@@ -289,6 +288,33 @@ footer nav ul li a {
 }
 .player-progress article.artifacts {
   grid-area: 5/1/6/4;
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+}
+.player-progress article.artifacts h4 {
+  font-size: 1.1rem;
+  text-align: center;
+}
+.player-progress article.artifacts h4:first-of-type {
+  grid-row: 1/2;
+}
+.player-progress article.artifacts ul {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.player-progress article.artifacts ul:first-of-type {
+  grid-row: 2/3;
+}
+.player-progress article.artifacts ul li {
+  margin: 0.8rem;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #0CC09E;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
 .player-progress article.relationships {
   grid-area: 6/1/7/4;
