--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -3,9 +3,6 @@ header {
     grid-template-columns: 17.5vw 65vw auto;
     max-width: 100vw;
     background-color:$blue;
-    // box-shadow: 0px .3rem 0px 0px rgba(67,97,238,0.6), 
-    //             0 .6rem 0px 0px rgba(67,97,238,0.4), 
-    //             0 .9rem 0px 0px rgba(67,97,238,0.2);
 
     img {
         grid-area: 1/1/2/2;
@@ -43,11 +40,14 @@ header {
             input {
                 width: 3rem;
                 height: 3rem;
+                padding: .8rem 1.2rem;
                 border:none;
                 background-image: url('/res04-projet-soutenance/assets/images/logout-icon.png');
                 background-size: cover;
                 background-repeat: no-repeat;
-                background-color: transparent;
+                background-color: $background-main;
+                clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                                100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
                 cursor: pointer;
     
                 &:hover {
