--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -294,6 +294,9 @@ footer nav ul li a {
   display: grid;
   grid-template-rows: repeat(4, auto);
 }
+.player-progress article.artifacts h3 {
+  justify-self: self-start;
+}
 .player-progress article.artifacts h4 {
   font-size: 1.1rem;
   text-align: center;
@@ -322,8 +325,36 @@ footer nav ul li a {
 .player-progress article.relationships {
   grid-area: 6/1/7/4;
 }
+.player-progress article.relationships .events ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.player-progress article.relationships .events ul li {
+  width: 8rem;
+  height: auto;
+  margin: 0.8rem 1rem;
+  transition: transform 0.3s ease;
+}
+.player-progress article.relationships .events ul li img {
+  width: 80%;
+  padding: 0.6rem;
+  background-color: #0CC09E;
+  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+}
+.player-progress article.relationships .events ul li:hover {
+  transform: scale(1.15);
+}
 .player-progress article.locations {
   grid-area: 7/1/8/4;
+}
+.player-progress article.locations .events {
+  display: flex;
+  justify-content: space-between;
+}
+.player-progress article.locations .events ul li img {
+  width: 8rem;
 }
 
 .games h3 {
@@ -332,7 +363,7 @@ footer nav ul li a {
 }
 .games section:first-of-type form {
   display: flex;
-  margin-top: 0.4rem;
+  margin-top: 0.8rem;
 }
 .games section:first-of-type form label {
   cursor: pointer;
@@ -354,6 +385,9 @@ footer nav ul li a {
 }
 .games section:first-of-type form input[type=submit]:hover {
   background-color: #FAFAFA;
+}
+.games section:last-of-type {
+  margin-top: 1.6rem;
 }
 .games section:last-of-type ul {
   list-style: square;
