--- a/assets/styles/scss/users/_game.scss
+++ b/assets/styles/scss/users/_game.scss
@@ -53,6 +53,10 @@
             display: grid;
             grid-template-rows: repeat(4, auto);
 
+            h3 {
+                justify-self: self-start;
+            }
+
             h4 {
                 font-size: 1.1rem;
                 text-align:center;
@@ -86,10 +90,52 @@
     
         &.relationships {
             grid-area: 6/1/7/4;
+
+            .events {
+
+                ul {
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content:space-between;
+
+                    li {
+                        width: 8rem;
+                        height: auto;
+                        margin: .8rem 1rem;
+                        transition: transform 0.3s ease;
+
+                        img {
+                            width: 80%;
+                            padding: .6rem;
+                            background-color: $green;
+                            clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 
+                                            10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 
+                                            90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+                        }
+
+                        &:hover {
+                            transform: scale(1.15);
+                        }
+                    }
+                }
+            }
         }
     
         &.locations {
             grid-area: 7/1/8/4;
+
+            .events {
+                display: flex;
+                justify-content: space-between;
+
+                ul {
+                    li {
+                        img {
+                            width: 8rem;
+                        }
+                    }
+                }
+            }
         }
     }
     
