--- a/templates/users/user/game_partials/_relationships.phtml
+++ b/templates/users/user/game_partials/_relationships.phtml
@@ -3,18 +3,22 @@
         $player = $data['relationships'];
     ?>
     <h3 class="title">Relationships</h3>
-    <dl class="events">
-        <?php
-            foreach($player as $relationship)
-            {
-        ?>
-                <dt>
-                    <img src="/res04-projet-soutenance/<?=$relationship->getVillager()->getPicture()->getUrl();?>" alt="<?=$relationship->getVillager()->getPicture()->getAlt();?>">
-                    <a href='/res04-projet-soutenance/villagers/<?= $relationship->getVillager()->getId();?>'><?=$relationship->getVillager()->getName();?></a>
-                </dt>
-                <dd><?=intval($relationship->getLevel() / 250);?> hearts out of 10.</dd>
-        <?php
-            }
-        ?>
-    </dl>
+    <section class="events">
+        <ul>
+            <?php
+                foreach($player as $relationship)
+                {
+            ?>
+                    <li>
+                        <a href='/res04-projet-soutenance/villagers/<?= $relationship->getVillager()->getId();?>'>
+                            <!-- <?=$relationship->getVillager()->getName();?> -->
+                            <img src="/res04-projet-soutenance/<?=$relationship->getVillager()->getPicture()->getUrl();?>" alt="<?=$relationship->getVillager()->getPicture()->getAlt();?>">
+                        </a>
+                        <p><?=intval($relationship->getLevel() / 250);?> heart(s) out of 10.</p>
+                    </li>
+            <?php
+                }
+            ?>
+        </ul>
+    </section>
 </article>
