Done the edit form, and done the locations part on the game page

--- a/assets/styles/scss/forms/_register.scss
+++ b/assets/styles/scss/forms/_register.scss
@@ -1,5 +1,5 @@
 form {
-    &.register-login {
+    &.register-login-edit {
         display: grid;
         border: 2px dashed $pink;
         width: 40rem;
