--- a/templates/users/user/login.phtml
+++ b/templates/users/user/login.phtml
@@ -1,6 +1,6 @@
 <main>
     <h2>Login</h2>
-    <form method="POST" action="/res04-projet-soutenance/login" id="login-form" class="register-login">
+    <form method="POST" action="/res04-projet-soutenance/login" id="login-form" class="register-login-edit">
         <fieldset>
             <label for="username">Username</label>
             <input type="text" name="username" id="username">
