--- a/templates/users/user/create.phtml
+++ b/templates/users/user/create.phtml
@@ -1,6 +1,6 @@
 <main>
     <h2>Register</h2>
-    <form method="POST" action="/res04-projet-soutenance/register" id="register-form" class="register-login">
+    <form method="POST" action="/res04-projet-soutenance/register" id="register-form" class="register-login-edit">
         <fieldset>
             <label for="username">Username</label>
             <input type="text" name="username" id="username">
