--- a/templates/users/user/delete.phtml
+++ b/templates/users/user/delete.phtml
@@ -1,6 +1,8 @@
-<h2>Delete my account</h2>
+<main>
+    <h2>Delete my account</h2>
 
-<form method="POST" action="/res04-projet-soutenance/my-account/delete">
-    <p>Are you sure to delete your account ? This action is irreversible.</p>
-    <input type="submit" value="Delete" name="submit-delete-account" id="submit-delete-account">
-</form>
+    <form method="POST" action="/res04-projet-soutenance/my-account/delete">
+        <p>Are you sure to delete your account ? This action is irreversible.</p>
+        <input type="submit" value="Delete" name="submit-delete-account" id="submit-delete-account">
+    </form>
+</main>
