--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'users/villager';
 @import 'users/game';
 @import 'users/my-games';
+@import 'users/my-account';
 @import 'forms/register';
 @import 'admin/partials/header';
 @import 'admin/homepage';
