--- a/templates/users/staticpages/homepage.phtml
+++ b/templates/users/staticpages/homepage.phtml
@@ -32,6 +32,20 @@
 
         <article>
             <h3>Linux</h3>
+            <ul>
+                <li>From Files, click Go and Enter Location.</li>
+                <li>Enter this text: <code>~/.config/StardewValley/Saves</code></li>
+                <li>Submit to open the folder.</li>
+            </ul>
+        </article>
+
+        <article>
+            <h3>Mac</h3>
+            <ul>
+                <li>From Finder, click Go and Go to Folder</li>
+                <li>Enter this text: <code>~/.config/StardewValley/Saves</code></li>
+                <li>Submit to open the folder.</li>
+            </ul>
         </article>
     </section>  
 </main>
