--- a/assets/styles/scss/users/_my-games.scss
+++ b/assets/styles/scss/users/_my-games.scss
@@ -15,6 +15,8 @@
                 border: 1px solid $pink;
                 padding: .5rem 1rem;
                 background-color: rgba(214,30,146,0.2);
+                text-decoration: underline dotted;
+                text-underline-offset: .2rem;
             }
 
             input[type=file] {
