--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -48,6 +48,20 @@ header nav form input:hover {
   filter: saturate(0);
 }
 
+/**** MEDIA QUERIES FOR TABLETS ****/
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  header img {
+    padding: 1rem 0;
+  }
+  header nav ul li {
+    padding: 0 1.5rem;
+  }
+}
 footer {
   background-color: #4361EE;
 }
@@ -70,6 +84,19 @@ footer nav ul li a {
   text-decoration: none;
 }
 
+/**** MEDIA QUERIES FOR TABLETS ****/
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  footer nav {
+    max-width: 100vw;
+  }
+  footer nav ul {
+    width: 100%;
+    justify-content: space-evenly;
+  }
+  footer nav ul li {
+    margin: 0 4rem;
+  }
+}
 .presentation {
   display: grid;
   grid-template-columns: repeat(2, auto);
