--- a/assets/styles/scss/users/partials/_footer.scss
+++ b/assets/styles/scss/users/partials/_footer.scss
@@ -23,3 +23,21 @@ footer {
         }
     }
 }
+
+/**** MEDIA QUERIES FOR TABLETS ****/
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+    footer {
+        nav {
+            max-width: 100vw;
+
+            ul {
+                width: 100%;
+                justify-content: space-evenly;
+                
+                li {
+                    margin: 0 4rem;
+                }
+            }
+        }
+    }
+}
