--- a/templates/users/staticpages/homepage.phtml
+++ b/templates/users/staticpages/homepage.phtml
@@ -1,4 +1,4 @@
-<main>
+<main class="homepage">
     <section class="presentation">
         <h2>Presentation</h2>
         <img src="/res04-projet-soutenance/assets/images/NightMarket.png" alt="Picture of the market on the port in Stardew Valley"/>
