--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -66,17 +66,11 @@ footer {
   background-color: #4361EE;
 }
 footer nav {
-  max-width: 65vw;
-  margin: 0 auto;
   padding: 0.8rem 0;
-  display: flex;
-  justify-content: center;
 }
 footer nav ul {
   display: flex;
-}
-footer nav ul li {
-  margin: 0 6rem;
+  justify-content: space-evenly;
 }
 footer nav ul li a {
   font-size: 1rem;
@@ -93,34 +87,44 @@ footer nav ul li a {
     width: 100%;
     justify-content: space-evenly;
   }
-  footer nav ul li {
-    margin: 0 4rem;
-  }
 }
-.presentation {
+.homepage section.presentation {
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(3, auto);
   padding: 2rem 0;
 }
-.presentation h2 {
+.homepage section.presentation h2 {
   grid-area: 1/1/2/3;
   margin-bottom: 1rem;
 }
-.presentation img {
+.homepage section.presentation img {
   grid-area: 2/2/4/3;
   width: 90%;
   margin: 1rem 0;
   justify-self: right;
 }
-.presentation p:first-of-type {
+.homepage section.presentation p:first-of-type {
   grid-area: 2/1/3/2;
   text-align: justify;
   margin: 1rem 0;
 }
-.presentation p:last-of-type {
+.homepage section.presentation p:last-of-type {
   grid-area: 3/1/4/2;
   text-align: justify;
+}
+.homepage section.find-file a {
+  text-decoration: none;
+  color: #D61E92;
+  font-weight: bolder;
+}
+.homepage section.find-file article {
+  margin-top: 2rem;
+}
+.homepage section code {
+  word-wrap: break-word;
+  background-color: rgba(12, 192, 158, 0.4);
+  padding: 0.2rem;
 }
 
 /**** CSS of index Villagers ****/
@@ -682,7 +686,7 @@ html body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  line-height: 1.4rem;
+  line-height: 1.6rem;
 }
 html body .hidden {
   display: none;
