--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -23,7 +23,7 @@ html {
         padding: 0;
         margin : 0;
         box-sizing: border-box;
-        line-height: 1.4rem;
+        line-height: 1.6rem;
 
         .hidden {
             display: none;
@@ -55,7 +55,9 @@ html {
                 
                 &.button-focus {
                     font-weight: bolder;
-                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 
+                                    20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 
+                                    100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
                 }
                 
             }
