--- a/assets/styles/scss/users/_homepage.scss
+++ b/assets/styles/scss/users/_homepage.scss
@@ -1,29 +1,53 @@
-.presentation {
-    display:grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(3, auto);
-    padding: 2rem 0;
+.homepage {
+    section {
 
-    h2 {
-        grid-area: 1/1/2/3;
-        margin-bottom: 1rem;
-    }
+        &.presentation {
+            display:grid;
+            grid-template-columns: repeat(2, auto);
+            grid-template-rows: repeat(3, auto);
+            padding: 2rem 0;
+        
+            h2 {
+                grid-area: 1/1/2/3;
+                margin-bottom: 1rem;
+            }
+        
+            img {
+                grid-area: 2/2/4/3;
+                width: 90%;
+                margin: 1rem 0;
+                justify-self: right;
+            }
+        
+            p:first-of-type {
+                grid-area: 2/1/3/2;
+                text-align: justify;
+                margin: 1rem 0;
+            }
+        
+            p:last-of-type {
+                grid-area: 3/1/4/2;
+                text-align: justify;
+            }
+        }
 
-    img {
-        grid-area: 2/2/4/3;
-        width: 90%;
-        margin: 1rem 0;
-        justify-self: right;
-    }
+        &.find-file {
 
-    p:first-of-type {
-        grid-area: 2/1/3/2;
-        text-align: justify;
-        margin: 1rem 0;
-    }
+            a {
+                text-decoration:none;
+                color: $pink;
+                font-weight: bolder;
+            }
 
-    p:last-of-type {
-        grid-area: 3/1/4/2;
-        text-align: justify;
+            article {
+                margin-top: 2rem;
+            }
+        }
+
+        code {
+            word-wrap: break-word;
+            background-color: rgba(12,192,158, .4);
+            padding: .2rem;
+        }
     }
 }
