--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -293,6 +293,7 @@ footer nav ul li a {
 .player-progress article h3 {
   width: -moz-fit-content;
   width: fit-content;
+  text-align: center;
   border: none;
   background-color: #4361EE;
   padding: 0.6rem 0.8rem;
@@ -331,6 +332,7 @@ footer nav ul li a {
 }
 .player-progress article.bundles ul li img {
   width: 2rem;
+  height: 2rem;
 }
 .player-progress article.bundles ul li p {
   margin-left: 0.6rem;
@@ -732,7 +734,7 @@ html body h1, html body h2, html body h3, html body h4 {
 html body h2 {
   font-size: 2rem;
   text-align: center;
-  padding: 2.5rem 0;
+  padding: 2rem 0;
 }
 html body h3 {
   margin-bottom: 1.5rem;
@@ -740,4 +742,11 @@ html body h3 {
 }
 html body table {
   border-collapse: collapse;
+}
+
+/**** MEDIA QUERIES FOR TABLETS ****/
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  html body main {
+    max-width: 85vw;
+  }
 }/*# sourceMappingURL=style.css.map */
