--- a/assets/styles/scss/users/_game.scss
+++ b/assets/styles/scss/users/_game.scss
@@ -14,6 +14,7 @@
 
         h3 {
             width: fit-content;
+            text-align:center;
             border: none;
             background-color: $blue;
             padding: 0.6rem .8rem;
@@ -56,6 +57,7 @@
 
                     img {
                         width: 2rem;
+                        height: 2rem;
                     }
 
                     p {
