--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -19,7 +19,9 @@
             font-weight: bolder;
             color: $background-main;
             font-size:1.2rem;
-            clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+            clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 
+                            20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 
+                            90% 10%, 80% 10%, 80% 0);
         }
     
         .villager-picture {
@@ -27,7 +29,9 @@
             justify-self: center;
             width: 14rem;
             background-color: $green;
-            clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+            clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 
+                            20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 
+                            90% 10%, 80% 10%, 80% 0);
         }
     
         .villager-general {
@@ -89,6 +93,9 @@
 
             .events {
                 width: 100%;
+                // height: 0;
+                // overflow:hidden;
+                // transition: height 0.3s ease-in-out;
 
                 table {
                     width: 100%;
@@ -121,6 +128,11 @@
                     }
                 }
             }
+
+            // .events.open {
+            //     display: table;
+            //     height: 400rem;
+            // }
         }
     }
 }
