--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 header {
   display: grid;
   grid-template-columns: 17.5vw 65vw auto;
@@ -22,16 +23,19 @@ header nav ul li a {
   font-size: 1.1rem;
   color: #4361EE;
   background-color: #FAFAFA;
-  text-decoration: none;
   padding: 0.8rem 1.2rem;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  transition: all 0.3s ease-in-out;
 }
-header nav form {
+header nav ul li a:hover {
+  transform: translateY(-0.5rem);
+}
+header nav ul li form {
   display: flex;
   align-items: center;
 }
-header nav form input {
+header nav ul li form input {
   width: 3rem;
   height: 3rem;
   padding: 0.8rem 1.2rem;
@@ -44,7 +48,7 @@ header nav form input {
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
   cursor: pointer;
 }
-header nav form input:hover {
+header nav ul li form input:hover {
   filter: saturate(0);
 }
 
@@ -191,7 +195,7 @@ footer nav ul li a {
   grid-row-gap: 1rem;
   grid-column-gap: 2rem;
 }
-.villager .single-villager h3 {
+.villager .single-villager h3:not(.title) {
   width: -moz-fit-content;
   width: fit-content;
   border: none;
@@ -203,6 +207,9 @@ footer nav ul li a {
   font-size: 1.2rem;
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+}
+.villager .single-villager h3:not(.title).title:after {
+  content: "Schedule ↑";
 }
 .villager .single-villager .villager-picture {
   grid-area: 1/1/2/3;
@@ -704,7 +711,6 @@ html body main {
 html body main .title {
   width: -moz-fit-content;
   width: fit-content;
-  justify-self: center;
   border: none;
   background-color: #4361EE;
   padding: 0.6rem 0.8rem;
@@ -719,6 +725,10 @@ html body main .title.button-focus {
   font-weight: bolder;
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+}
+html body a {
+  text-decoration: none;
+  display: inline-block;
 }
 html body p {
   margin: 0;
