--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -10,7 +10,7 @@
         grid-row-gap: 1rem;
         grid-column-gap: 2rem;
 
-        h3 {
+        h3:not(.title) {
             width: fit-content;
             border: none;
             background-color: $blue;
@@ -22,6 +22,10 @@
             clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 
                             20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 
                             90% 10%, 80% 10%, 80% 0);
+
+            &.title:after {
+                content: 'Schedule ↑';
+            }
         }
     
         .villager-picture {
