--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -25,33 +25,37 @@ header {
                     font-size: 1.1rem;
                     color: $blue;
                     background-color: $background-main;
-                    text-decoration: none;
                     padding: .8rem 1.2rem;
                     clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
                                     100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-                }
-            }
-        }
+                    transition: all 0.3s ease-in-out;
 
-        form {
-            display:flex;
-            align-items:center;
-    
-            input {
-                width: 3rem;
-                height: 3rem;
-                padding: .8rem 1.2rem;
-                border:none;
-                background-image: url('/res04-projet-soutenance/assets/images/logout-icon.png');
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-color: $background-main;
-                clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
-                                100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-                cursor: pointer;
-    
-                &:hover {
-                    filter: saturate(0);
+                    &:hover {
+                        transform: translateY(-.5rem);
+                    }
+                }
+
+                form {
+                    display:flex;
+                    align-items:center;
+            
+                    input {
+                        width: 3rem;
+                        height: 3rem;
+                        padding: .8rem 1.2rem;
+                        border:none;
+                        background-image: url('/res04-projet-soutenance/assets/images/logout-icon.png');
+                        background-size: cover;
+                        background-repeat: no-repeat;
+                        background-color: $background-main;
+                        clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                                        100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+                        cursor: pointer;
+            
+                        &:hover {
+                            filter: saturate(0);
+                        }
+                    }
                 }
             }
         }
