Added an arrow that changes when you click on it on the collapseData function

--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -64,7 +64,7 @@ html {
 
         a {
             text-decoration: none;
-            display: inline-block; // To able the transform property on it
+            display: inline-block; // To enable the transform property on it
         }
 
         p {
