--- a/templates/users/villagers/partials/_planning3.phtml
+++ b/templates/users/villagers/partials/_planning3.phtml
@@ -1,4 +1,4 @@
-<h3 class="title">Schedule ↓</h3>
+<h3 class="title">Schedule</h3>
 <article class="events">
     <?php
         foreach($_SESSION['planning']->getSchedule() as $key => $schedules)
