--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -26,7 +26,7 @@ header nav ul li a {
   padding: 0.8rem 1.2rem;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 header nav ul li a:hover {
   transform: translateY(-0.5rem);
@@ -96,7 +96,7 @@ footer nav ul li a {
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(3, auto);
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 .homepage section.presentation h2 {
   grid-area: 1/1/2/3;
@@ -259,6 +259,9 @@ footer nav ul li a {
   grid-area: 4/1/5/3;
   border: 2px dashed #D61E92;
   padding: 1rem;
+}
+.villager .single-villager .planning .title:enabled {
+  content: "Schedule ↑";
 }
 .villager .single-villager .planning .events {
   width: 100%;
