--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -74,6 +74,7 @@ html {
         ul {
             list-style: none;
             padding: 0;
+            margin: 0;
         }
 
         h1, h2, h3, h4 {
@@ -104,6 +105,20 @@ html {
         body {
             main {
                 max-width: 85vw;
+            }
+        }
+    }
+}
+
+
+/**** MEDIA QUERIES FOR SMARTPHONES ****/
+@media only screen and (max-width: 767px) {
+    html {
+        body {
+            main {
+                max-width: 100%;
+                box-shadow: none;
+                padding: .6rem;
             }
         }
     }
