--- a/assets/styles/scss/users/_villagers.scss
+++ b/assets/styles/scss/users/_villagers.scss
@@ -25,7 +25,6 @@
     .villagers {
     
         ul {
-            margin: 0;
             display:flex;
             flex-wrap: wrap;
             justify-content:space-between;
@@ -41,7 +40,9 @@
                     padding-top: .6rem;
                     padding: 0 .6rem;
                     background-color: $green;
-                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 
+                                    20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 
+                                    100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
                 }
     
                 a {
@@ -52,6 +53,22 @@
     
                 &:hover {
                     transform: scale(1.15);
+                }
+            }
+        }
+    }
+}
+
+
+/**** MEDIA QUERIES FOR SMARTPHONES ****/
+@media only screen and (max-width: 767px) {
+    .all-villagers {
+        .villagers {
+            ul {
+                justify-content:space-around;
+    
+                li {
+                    width: 30%;
                 }
             }
         }
