--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -462,10 +462,21 @@ footer nav ul li a {
 }
 .player-progress article.locations .events ul li img {
   display: inline-block;
-  width: 16rem;
+  width: 45%;
   margin-right: 0.6rem;
 }
 
+/**** MEDIA QUERIES FOR SMARTPHONES ****/
+@media only screen and (max-width: 767px) {
+  .player-progress {
+    display: flex;
+    flex-direction: column;
+  }
+  .player-progress article.bundles ul {
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }
+}
 .games h3 {
   margin-bottom: 1.5rem;
   font-size: 1.4rem;
@@ -524,8 +535,17 @@ footer nav ul li a {
   grid-area: 2/1/4/2;
 }
 .account a {
-  text-decoration: none;
+  text-align: center;
   color: #0C092B;
+  background-color: #0CC09E;
+  padding: 0.5rem 1rem;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  align-self: center;
 }
 .account a:first-of-type {
   grid-area: 2/2/3/3;
@@ -534,6 +554,16 @@ footer nav ul li a {
   grid-area: 3/2/4/3;
 }
 
+/**** MEDIA QUERIES FOR SMARTPHONES ****/
+@media only screen and (max-width: 767px) {
+  .account {
+    display: flex;
+    flex-direction: column;
+  }
+  .account a {
+    margin: 0.8rem 0;
+  }
+}
 form.register-login-edit {
   display: grid;
   border: 2px dashed #D61E92;
